--- a/src/main/resources/org/example/a/hello-view.fxml
+++ b/src/main/resources/org/example/a/hello-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="175.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENCUESTA" textAlignment="CENTER" wrappingWidth="186.83056640625">
          <font>
@@ -32,6 +32,13 @@
       <Label layoutX="303.0" layoutY="201.0" text="¿CUAL?" />
       <Label layoutX="140.0" layoutY="286.0" text="MARQUE DEL 1 AL 10 SU GRADO DE AFICCION" />
       <Separator orientation="VERTICAL" prefHeight="200.0" />
-      <Slider />
+      <Slider layoutX="116.0" layoutY="329.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="406.0" showTickLabels="true" showTickMarks="true" />
+      <Slider layoutX="116.0" layoutY="369.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="406.0" showTickLabels="true" showTickMarks="true" />
+      <Slider layoutX="116.0" layoutY="406.0" majorTickUnit="1.0" max="10.0" prefHeight="16.0" prefWidth="406.0" showTickLabels="true" showTickMarks="true" />
+      <Label layoutX="48.0" layoutY="329.0" text="Compras" />
+      <Label layoutX="15.0" layoutY="377.0" text="ver television" />
+      <Label layoutX="48.0" layoutY="406.0" text="ir al cine " />
+      <Button layoutX="92.0" layoutY="468.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="180.0" text="Aceptar" />
+      <Button layoutX="334.0" layoutY="468.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="162.0" text="Cancelar" />
    </children>
 </AnchorPane>
