--- a/src/main/resources/org/example/a/hello-view.fxml
+++ b/src/main/resources/org/example/a/hello-view.fxml
@@ -1,44 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="506.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="628.0" prefWidth="617.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.a.HelloController">
    <children>
-      <Text layoutX="175.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENCUESTA" textAlignment="CENTER" wrappingWidth="186.83056640625">
+      <Label contentDisplay="CENTER" layoutX="245.0" layoutY="43.0" prefHeight="39.0" prefWidth="148.0" text="ENCUESTA" textAlignment="CENTER" wrapText="true">
          <font>
-            <Font size="29.0" />
+            <Font size="24.0" />
          </font>
-      </Text>
-      <Text layoutX="29.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PROFESION" />
-      <Text layoutX="18.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº HERMANOS" />
-      <TextField layoutX="120.0" layoutY="118.0" />
-      <TextField layoutX="120.0" layoutY="82.0" prefHeight="26.0" prefWidth="414.0" />
-      <Text layoutX="321.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDAD" />
-      <SplitMenuButton layoutX="368.0" layoutY="117.0" mnemonicParsing="false" textAlignment="CENTER" wrapText="true">
-        <items>
-          <MenuItem mnemonicParsing="false" text="18-30" />
-            <MenuItem mnemonicParsing="false" text="31 y 50" />
-            <MenuItem mnemonicParsing="false" text="51-70" />
-          <MenuItem mnemonicParsing="false" text="MENORES 18" />
-        </items>
-      </SplitMenuButton>
-      <RadioButton layoutX="186.0" layoutY="160.0" mnemonicParsing="false" text="HOMBRE" />
-      <RadioButton layoutX="335.0" layoutY="160.0" mnemonicParsing="false" text="MUJER" />
-      <Text layoutX="77.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SEXO" />
-      <CheckBox layoutX="14.0" layoutY="200.0" mnemonicParsing="false" text="¿PRACTICA ALGUN DEPORTE?" />
-      <TextArea layoutX="308.0" layoutY="218.0" prefHeight="54.0" prefWidth="211.0" text="TENIS &#10;FUTBOL &#10;BALONCESTO&#10;&#10;" />
-      <Label layoutX="303.0" layoutY="201.0" text="¿CUAL?" />
-      <Label layoutX="140.0" layoutY="286.0" text="MARQUE DEL 1 AL 10 SU GRADO DE AFICCION" />
-      <Separator orientation="VERTICAL" prefHeight="200.0" />
-      <Slider layoutX="116.0" layoutY="329.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="406.0" showTickLabels="true" showTickMarks="true" />
-      <Slider layoutX="116.0" layoutY="369.0" majorTickUnit="1.0" max="10.0" prefHeight="38.0" prefWidth="406.0" showTickLabels="true" showTickMarks="true" />
-      <Slider layoutX="116.0" layoutY="406.0" majorTickUnit="1.0" max="10.0" prefHeight="16.0" prefWidth="406.0" showTickLabels="true" showTickMarks="true" />
-      <Label layoutX="48.0" layoutY="329.0" text="Compras" />
-      <Label layoutX="15.0" layoutY="377.0" text="ver television" />
-      <Label layoutX="48.0" layoutY="406.0" text="ir al cine " />
-      <Button layoutX="92.0" layoutY="468.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="180.0" text="Aceptar" />
-      <Button layoutX="334.0" layoutY="468.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="162.0" text="Cancelar" />
+      </Label>
+      <TextField fx:id="txtProfesion" layoutX="135.0" layoutY="103.0" prefHeight="24.0" prefWidth="419.0" />
+      <TextField fx:id="txtHermanos" layoutX="135.0" layoutY="162.0" />
+      <Label layoutX="14.0" layoutY="166.0" text="Nº Hermanos:" />
+      <Label layoutX="326.0" layoutY="166.0" text="Edad:" />
+      <Label layoutX="78.0" layoutY="215.0" text="Sexo:" />
+      <ComboBox fx:id="comboBoxEdad" layoutX="404.0" layoutY="162.0" onAction="#seleccionarEdad" prefWidth="150.0" />
+      <RadioButton fx:id="rbHombre" layoutX="135.0" layoutY="214.0" mnemonicParsing="false" text="Hombre">
+         <toggleGroup>
+            <ToggleGroup fx:id="grpSexo" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="rbMujer" layoutX="245.0" layoutY="214.0" mnemonicParsing="false" text="Mujer" toggleGroup="$grpSexo" />
+      <RadioButton fx:id="rbOtro" layoutX="326.0" layoutY="214.0" mnemonicParsing="false" text="Otro" toggleGroup="$grpSexo" />
+      <CheckBox fx:id="checkBoxPregunta" layoutX="16.0" layoutY="250.0" mnemonicParsing="false" text="¿Practica algun deporte?" />
+      <ListView fx:id="listViewCual" layoutX="322.0" layoutY="278.0" onMousePressed="#seleccionarDeporte" prefHeight="91.0" prefWidth="251.0" />
+      <Label layoutX="319.0" layoutY="251.0" prefHeight="16.0" prefWidth="53.0" text="¿Cual?" />
+      <Text layoutX="155.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Marque del 1 al 10 su grado de aficcion" wrappingWidth="269.61328125" />
+      <Slider fx:id="sliderCompras" blockIncrement="1.0" layoutX="137.0" layoutY="413.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="62.0" prefWidth="451.0" showTickLabels="true" showTickMarks="true" value="5.0" />
+      <Slider fx:id="sliderTele" blockIncrement="1.0" layoutX="137.0" layoutY="476.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="38.0" prefWidth="451.0" showTickLabels="true" showTickMarks="true" value="5.0" />
+      <Slider fx:id="sliderCine" blockIncrement="1.0" layoutX="137.0" layoutY="525.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="38.0" prefWidth="451.0" showTickLabels="true" showTickMarks="true" value="5.0" />
+      <Label layoutX="47.0" layoutY="436.0" text="Compras:" />
+      <Label layoutX="19.0" layoutY="495.0" text="Ver Television:" />
+      <Label layoutX="49.0" layoutY="536.0" text="Ir al cine:" />
+      <Button fx:id="btnAceptar" layoutX="61.0" layoutY="578.0" mnemonicParsing="false" onAction="#mostrarDialgo" prefHeight="35.0" prefWidth="200.0" text="Aceptar" />
+      <Button fx:id="btnCancelar" layoutX="333.0" layoutY="576.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" text="Cancelar" />
+      <Label layoutX="35.0" layoutY="107.0" text="Profesion:" />
    </children>
 </AnchorPane>
