--- a/src/main/resources/org/example/a/hello-view.fxml
+++ b/src/main/resources/org/example/a/hello-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!-- Importación de componentes JavaFX -->
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -13,37 +14,119 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="628.0" prefWidth="617.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.a.HelloController">
+<!-- Definición del contenedor principal: AnchorPane -->
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="628.0" prefWidth="617.0"
+            xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.example.a.HelloController">
+
+   <!-- Elementos hijos del AnchorPane -->
    <children>
-      <Label contentDisplay="CENTER" layoutX="245.0" layoutY="43.0" prefHeight="39.0" prefWidth="148.0" text="ENCUESTA" textAlignment="CENTER" wrapText="true">
+
+      <!-- Etiqueta principal del título de la encuesta -->
+      <Label contentDisplay="CENTER" layoutX="245.0" layoutY="43.0"
+             prefHeight="39.0" prefWidth="148.0" text="ENCUESTA"
+             textAlignment="CENTER" wrapText="true">
+         <!-- Definición del tamaño de la fuente -->
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="txtProfesion" layoutX="135.0" layoutY="103.0" prefHeight="24.0" prefWidth="419.0" />
+
+      <!-- Campo de texto para ingresar la profesión del usuario -->
+      <TextField fx:id="txtProfesion" layoutX="135.0" layoutY="103.0"
+                 prefHeight="24.0" prefWidth="419.0" />
+
+      <!-- Campo de texto para ingresar el número de hermanos -->
       <TextField fx:id="txtHermanos" layoutX="135.0" layoutY="162.0" />
+
+      <!-- Etiqueta que indica dónde se debe ingresar el número de hermanos -->
       <Label layoutX="14.0" layoutY="166.0" text="Nº Hermanos:" />
+
+      <!-- Etiqueta para la selección de la edad -->
       <Label layoutX="326.0" layoutY="166.0" text="Edad:" />
+
+      <!-- Etiqueta para la selección de sexo del usuario -->
       <Label layoutX="78.0" layoutY="215.0" text="Sexo:" />
-      <ComboBox fx:id="comboBoxEdad" layoutX="404.0" layoutY="162.0" onAction="#seleccionarEdad" prefWidth="150.0" />
-      <RadioButton fx:id="rbHombre" layoutX="135.0" layoutY="214.0" mnemonicParsing="false" text="Hombre">
+
+      <!-- ComboBox para seleccionar la edad del usuario -->
+      <ComboBox fx:id="comboBoxEdad" layoutX="404.0" layoutY="162.0"
+                onAction="#seleccionarEdad" prefWidth="150.0" />
+
+      <!-- RadioButton para seleccionar "Hombre" como opción de sexo -->
+      <RadioButton fx:id="rbHombre" layoutX="135.0" layoutY="214.0"
+                   mnemonicParsing="false" text="Hombre">
+         <!-- ToggleGroup para agrupar los botones de selección de sexo -->
          <toggleGroup>
             <ToggleGroup fx:id="grpSexo" />
-         </toggleGroup></RadioButton>
-      <RadioButton fx:id="rbMujer" layoutX="245.0" layoutY="214.0" mnemonicParsing="false" text="Mujer" toggleGroup="$grpSexo" />
-      <RadioButton fx:id="rbOtro" layoutX="326.0" layoutY="214.0" mnemonicParsing="false" text="Otro" toggleGroup="$grpSexo" />
-      <CheckBox fx:id="checkBoxPregunta" layoutX="16.0" layoutY="250.0" mnemonicParsing="false" text="¿Practica algun deporte?" />
-      <ListView fx:id="listViewCual" layoutX="322.0" layoutY="278.0" onMousePressed="#seleccionarDeporte" prefHeight="91.0" prefWidth="251.0" />
-      <Label layoutX="319.0" layoutY="251.0" prefHeight="16.0" prefWidth="53.0" text="¿Cual?" />
-      <Text layoutX="155.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Marque del 1 al 10 su grado de aficcion" wrappingWidth="269.61328125" />
-      <Slider fx:id="sliderCompras" blockIncrement="1.0" layoutX="137.0" layoutY="413.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="62.0" prefWidth="451.0" showTickLabels="true" showTickMarks="true" value="5.0" />
-      <Slider fx:id="sliderTele" blockIncrement="1.0" layoutX="137.0" layoutY="476.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="38.0" prefWidth="451.0" showTickLabels="true" showTickMarks="true" value="5.0" />
-      <Slider fx:id="sliderCine" blockIncrement="1.0" layoutX="137.0" layoutY="525.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="38.0" prefWidth="451.0" showTickLabels="true" showTickMarks="true" value="5.0" />
+         </toggleGroup>
+      </RadioButton>
+
+      <!-- RadioButton para seleccionar "Mujer" como opción de sexo -->
+      <RadioButton fx:id="rbMujer" layoutX="245.0" layoutY="214.0"
+                   mnemonicParsing="false" text="Mujer" toggleGroup="$grpSexo" />
+
+      <!-- RadioButton para seleccionar "Otro" como opción de sexo -->
+      <RadioButton fx:id="rbOtro" layoutX="326.0" layoutY="214.0"
+                   mnemonicParsing="false" text="Otro" toggleGroup="$grpSexo" />
+
+      <!-- CheckBox para preguntar si el usuario practica algún deporte -->
+      <CheckBox fx:id="checkBoxPregunta" layoutX="16.0" layoutY="250.0"
+                mnemonicParsing="false" text="¿Practica algun deporte?" />
+
+      <!-- ListView para seleccionar el deporte que practica el usuario -->
+      <ListView fx:id="listViewCual" layoutX="322.0" layoutY="278.0"
+                onMousePressed="#seleccionarDeporte" prefHeight="91.0"
+                prefWidth="251.0" />
+
+      <!-- Etiqueta para preguntar "¿Cual?" cuando el usuario selecciona si practica deportes -->
+      <Label layoutX="319.0" layoutY="251.0" prefHeight="16.0"
+             prefWidth="53.0" text="¿Cual?" />
+
+      <!-- Texto que pide calificar diferentes actividades del 1 al 10 -->
+      <Text layoutX="155.0" layoutY="401.0" strokeType="OUTSIDE"
+            strokeWidth="0.0" text="Marque del 1 al 10 su grado de aficcion"
+            wrappingWidth="269.61328125" />
+
+      <!-- Slider para calificar el interés en "Compras" -->
+      <Slider fx:id="sliderCompras" blockIncrement="1.0" layoutX="137.0"
+              layoutY="413.0" majorTickUnit="1.0" max="10.0"
+              minorTickCount="1" prefHeight="62.0" prefWidth="451.0"
+              showTickLabels="true" showTickMarks="true" value="5.0" />
+
+      <!-- Slider para calificar el interés en "Ver Televisión" -->
+      <Slider fx:id="sliderTele" blockIncrement="1.0" layoutX="137.0"
+              layoutY="476.0" majorTickUnit="1.0" max="10.0"
+              minorTickCount="1" prefHeight="38.0" prefWidth="451.0"
+              showTickLabels="true" showTickMarks="true" value="5.0" />
+
+      <!-- Slider para calificar el interés en "Ir al Cine" -->
+      <Slider fx:id="sliderCine" blockIncrement="1.0" layoutX="137.0"
+              layoutY="525.0" majorTickUnit="1.0" max="10.0"
+              minorTickCount="1" prefHeight="38.0" prefWidth="451.0"
+              showTickLabels="true" showTickMarks="true" value="5.0" />
+
+      <!-- Etiqueta para el slider de "Compras" -->
       <Label layoutX="47.0" layoutY="436.0" text="Compras:" />
+
+      <!-- Etiqueta para el slider de "Ver Televisión" -->
       <Label layoutX="19.0" layoutY="495.0" text="Ver Television:" />
+
+      <!-- Etiqueta para el slider de "Ir al Cine" -->
       <Label layoutX="49.0" layoutY="536.0" text="Ir al cine:" />
-      <Button fx:id="btnAceptar" layoutX="61.0" layoutY="578.0" mnemonicParsing="false" onAction="#mostrarDialgo" prefHeight="35.0" prefWidth="200.0" text="Aceptar" />
-      <Button fx:id="btnCancelar" layoutX="333.0" layoutY="576.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" text="Cancelar" />
+
+      <!-- Botón "Aceptar" que ejecuta la acción mostrarDialgo al ser presionado -->
+      <Button fx:id="btnAceptar" layoutX="61.0" layoutY="578.0"
+              mnemonicParsing="false" onAction="#mostrarDialgo"
+              prefHeight="35.0" prefWidth="200.0" text="Aceptar" />
+
+      <!-- Botón "Cancelar" sin acción asociada -->
+      <Button fx:id="btnCancelar" layoutX="333.0" layoutY="576.0"
+              mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0"
+              text="Cancelar" />
+
+      <!-- Etiqueta para el campo de texto de la "Profesión" -->
       <Label layoutX="35.0" layoutY="107.0" text="Profesion:" />
+
    </children>
 </AnchorPane>
